# legalise

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_PLAN.md  BUILD_PLAN_BROADER.md  CHANGELOG.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  HANDOVER_ASSISTANT.md  HANDOVER_AUTH.md  HANDOVER_AUTH_REVIEW.md  HANDOVER_BROADER_A.md  HANDOVER_BROADER_B.md  HANDOVER_BROADER_C.md  HANDOVER_DAY_CD.md  HANDOVER_DAY_E.md  HANDOVER_DESIGN_RETOKEN.md  HANDOVER_EXTERNAL.md  HANDOVER_INFRA_BUILD.md  HANDOVER_LAUNCH.md  HANDOVER_LAUNCH_PLAYBOOK.md  HANDOVER_LAUNCH_QA.md  HANDOVER_NEXT.md  HANDOVER_PIVOT.md  HANDOVER_PIVOT_DONE.md  HANDOVER_R3.md  HANDOVER_R4.md  HANDOVER_R5.md  HANDOVER_R6.md  HANDOVER_R7_REREVIEW.md  HANDOVER_REVIEW_R1_R3.md  HANDOVER_REVIEW_R6_ASSISTANT.md  MANIFESTO.md  PRE_FLIGHT.md  README.md  REGULATORY_PLUMBING.md  REVIEW_HANDOVER.md  ROADMAP.md  SCOPE.md  (+1 more)
backend/: Dockerfile  PHASE_INFRA_DELTA.md  alembic.ini  entrypoint.sh  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_matter_tables.py  0003_auth.py  0004_phase_a.py  0005_phase_b.py  0006_phase_c.py  0007_assistant.py  0008_capability_grants.py  0009_user_plan.py  0010_jobs.py  0011_audit_worm.py  0012_phase1_state_machine.py  0013_phase1_matter_context.py  0014_phase1_advice_boundary.py  0015_phase2_grants_v2.py  0016_phase3_installed_modules.py  0017_phase5_audit_cost_columns.py  0018_phase6_matter_artifacts.py  0019_phase7_grant_scope_columns.py  0020_phase7_scope_type_vocab_check.py  0021_supervisor_review.py  0022_professional_signoff.py  0023_document_version_user_edit.py  0024_document_version_rich_json.py  0025_document_comments.py  0026_document_edit_sessions.py  0027_document_version_file_metadata.py  0028_document_comment_anchors.py  0029_document_working_drafts.py  0030_audit_hash_chain.py  0031_signature_status_rename.py  0032_drop_tabular_review.py  0033_auth_throttle_events.py  0034_demand_capture.py  0035_external_packs.py  0036_document_chunks.py  0037_document_index_status.py  0038_assistant_message_sources.py  0039_chronology_event_status.py  0040_assistant_threads.py  (+3 more)
backend/app/: __init__.py  main.py  worker.py
backend/app/adapters/: __init__.py  plugin_bridge.py
backend/app/agents/: __init__.py  base.py  orchestrator.py
backend/app/api/: __init__.py  account.py  admin_launch_funnel.py  admin_users.py  advice_boundary.py  agent_evals.py  artifacts.py  audit.py  auth.py  auth_schemas.py  demo.py  documents.py  exports.py  external_packs.py  grants.py  invocations.py  jobs.py  lawve_import.py  magic_link.py  matter_context.py  matters.py  modules.py  oauth.py  reviews.py  settings.py  signoffs.py  state_machine.py  submissions.py  system.py  usage.py  workspace.py
backend/app/core/: __init__.py  admin_check.py  api.py  audit.py  audit_chain.py  audit_cost.py  audit_reconstruction.py  auth.py  capabilities.py  chunking.py  config.py  db.py  demand_capture.py  demo_loop.py  dependency_resolver.py  document_engine.py  document_uploads.py  email.py  embeddings.py  encryption.py  export_chain_verifier.py  exports.py  external_pack.py  github_import.py  grants_lifecycle.py  indexing.py  jobs.py  lawve_directory.py  lawve_import.py  limits.py  magic_link.py  matter_access.py  matter_artifacts.py  matter_fs.py  matter_lifecycle.py  model_catalog.py  model_gateway.py  oauth.py  observability.py  posture_gate.py  (+15 more)
backend/app/models/: __init__.py  advice_boundary_decision.py  assistant.py  audit.py  audit_chain.py  auth_throttle.py  base.py  document.py  document_body.py  document_chunk.py  document_comment.py  document_edit.py  document_edit_session.py  document_version.py  document_working_draft.py  event.py  installed_module.py  job.py  matter.py  user.py  (+12 more)
backend/contrib/: __init__.py
backend/scripts/: sign_example_module.py  sign_manifest.py
backend/tests/: README.md  _assistant_pipeline_helpers.py  conftest.py  test_account_delete.py  test_admin_api.py  test_advice_boundary.py  test_agent_evals.py  test_anonymisation_optional.py  test_archived_matter_access.py  test_artifact_legacy_unavailable.py  test_assistant_pipeline.py  test_assistant_pipeline_budget.py  test_assistant_pipeline_failures.py  test_assistant_pipeline_history.py  test_assistant_pipeline_turn.py  test_assistant_save_draft.py  test_assistant_streaming.py  test_audit_chain.py  test_audit_chain_endpoint.py  test_audit_coverage.py  test_audit_module_kwarg.py  test_audit_reconstruction.py  test_audit_route.py  test_audit_worm.py  test_audit_worm_role_split.py  test_auth_login.py  test_auth_magic_link.py  test_auth_oauth.py  test_auth_rate_limit.py  test_bootstrap_admin.py  test_capabilities.py  test_capability_vocabulary_schema.py  test_chronology_dedup.py  test_chronology_smoke.py  test_chunking.py  test_contract_review_source_anchors.py  test_declared_capabilities_resolver.py  test_demand_capture.py  test_demo_loop.py  test_doctor.py  (+120 more)
(+688 files in other folders)
